sampleapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      name: sampleapp
      labels:
        app: sampleapp
    spec:
      containers:
        - name: sampleapp
          image: azurecontainer77.azurecr.io/sampleapp:latest
